deployment/applications/namespaces/security/vault/templates/vault.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.demo.zebreje.uk
  rules:
    - host: "vault.demo.zebreje.uk"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vault
                port:
                  number: 8200
